# LingXi

./: .env.example  .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  challenge_fingerprints.py  config.py  host_failover.py  kali_container.py  level2_task_hints.py  log_utils.py  main.py  main_battle_task_hints.py  mock_platform_server.py  requirements.txt  runtime_env.py  start_daemon.sh
.github/: pull_request_template.md
agent/: __init__.py  console.py  main_battle_progress.py  prompts.py  reflector.py  scheduler.py  sdk_runner.py  sdk_solver.py  skills.py
ctf_writeups_kb/: .gitignore  README.md  agent.py  main.py  offline_ingest.py  pyproject.toml  scraper.py  store.py
ctf_writeups_kb/data/: source_library_cn.json
ctf_writeups_kb/src/ctf_kb/: __init__.py  cli.py  config.py  config_optimized.py  models.py
ctf_writeups_kb/src/ctf_kb/api/: app.py
ctf_writeups_kb/src/ctf_kb/crawler/: ctftime.py
ctf_writeups_kb/src/ctf_kb/llm/: claude_agent.py
ctf_writeups_kb/src/ctf_kb/rag/: chunker.py  ingest.py  retriever.py
ctf_writeups_kb/src/ctf_kb/vector/: __init__.py  common.py  embedding.py  factory.py  milvus_store.py  milvus_store_optimized.py  qdrant_store.py
ctf_writeups_kb/tests/: test_api_search.py  test_ingest_pipeline.py  test_offline_chat.py  test_retriever_and_vector.py
docker/: Dockerfile.kali  docker-compose.yml
llm/: provider.py
memory/: knowledge_gateway.py  knowledge_service.py  knowledge_store.py  knowledge_writeback.py  store.py
tests/: test_advisor_window.py  test_component_log_files.py  test_fingerprint_guidance.py  (+22 more)
(+25 files in other folders)
