[project]
name = "ctf-writeups-kb"
version = "0.1.0"
description = "CTF writeups knowledge base with crawler, vector retrieval, and API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.0",
    "crawl4ai>=0.8.6",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "pymilvus[milvus_lite]>=2.6.0",
    "qdrant-client>=1.12.1",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctf_kb"]
